--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
 	"client": {
 		"host": "PlayHoaxMCwaterdoodo.aternos.me",
 		"port": "42720",
-		"username": "Sigma"
+		"username": "Sigmabot"
 	},
 	
 	"! DO NOT EDIT BELOW !": "ONLY IF YOU KNOW WHAT YOU ARE DOING",
